--- a/index.html
+++ b/index.html
@@ -454,9 +454,10 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code> @article{Chen25-ecot-lite,
-    title={Training Strategies for Efficient Embodied Reasoning},
-    author={William Chen and Suneel Belkhale and Suvir Mirchandani and Oier Mees and Danny Driess and Karl Pertsch and Sergey Levine},
-    year={2025}
+        title={Training Strategies for Efficient Embodied Reasoning},
+        author={William Chen and Suneel Belkhale and Suvir Mirchandani and Oier Mees  and Danny Driess and Karl Pertsch and Sergey Levine},
+        journal = {arXiv preprint arXiv:2505.08243},
+        year={2025},
 } </code></pre>
     </div>
   </section>
