add link to libero data

--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
                   </a>
                 </span>
 
+                <!-- Data Link. -->
+                <span class="link-block">
+                  <a href="https://huggingface.co/datasets/Embodied-CoT/embodied_features_and_demos_libero"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <img src="static/images/hf_icon.svg" />
+                    </span>
+                    <span>Data</span>
+                  </a>
+                </span>
+
                 <!-- Video Link. -->
                 <!-- TODO 
                 <span class="link-block"> 
